k8s-security-framework/policies/network-security/KSP-NET-001/tests/boundary-opted-in-development-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: net-001-boundary
  labels:
    policies.ksp.io/generate-network-baseline: enabled
    policies.ksp.io/environment: dev
