k8s-security-framework/policies/network-security/KSP-NET-001/tests/exception-resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ksp-net-001-exception
  labels:
    policies.ksp.io/generate-resource-governance: enabled
    policies.ksp.io/generate-network-baseline: enabled
