k8s-security-framework/policies/network-security/KSP-NET-001/tests/exception-resources-with-policy-violation.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ksp-net-001-exception
  labels:
    policies.ksp.io/generate-network-baseline: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: ksp-net-001-exception-similar
  labels:
    policies.ksp.io/generate-network-baseline: enabled
