k8s-security-framework/policies/network-security/KSP-NET-001/tests/positive-namespace-opted-in-network-baseline.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: net-001-positive
  labels:
    policies.ksp.io/generate-network-baseline: enabled
