k8s-security-framework/policies/network-security/KSP-NET-001/tests/positive-opt-in-with-additional-labels-generated.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress-egress
  namespace: ksp-net-001-positive-opt-in-with-additional-labels
  labels:
    app.kubernetes.io/managed-by: kyverno
    policies.ksp.io/generated-by: ksp-net-001
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress: []
  egress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
  namespace: ksp-net-001-positive-opt-in-with-additional-labels
  labels:
    app.kubernetes.io/managed-by: kyverno
    policies.ksp.io/generated-by: ksp-net-001
spec:
  podSelector: {}
  policyTypes: [Egress]
  egress:
  - to:
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values: [kube-system]
      podSelector:
        matchExpressions:
        - key: k8s-app
          operator: In
          values: [kube-dns]
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
